<resources>
    <string name="app_name">FindHospital</string>
    <string name="state">State</string>
    <string name="negative">Negative</string>
    <string name="deaths">Deaths</string>
    <string name="positive">Positive</string>
    <string name="week">1 Week</string>
    <string name="month">1 Month</string>
    <string name="max">Max</string>
    <string name="title_home">List</string>
    <string name="title_dashboard">Map</string>
    <string name="title_notifications">Chat</string>
    <string name="label_all">all</string>
    <string name="no_tasks_all">no tasks</string>
    <string name="maps_api_key">AIzaSyDhp9velxKCu4zR7j8iQJTuJvGY9pjnPoU</string>
    <string name="label_active">active</string>
    <string name="no_tasks_active">no tasks active</string>
    <string name="label_completed">label completed</string>
    <string name="no_tasks_completed">no tasks completed</string>
    <string name="completed_tasks_cleared">completed tasks cleared</string>
    <string name="task_marked_complete">task completed</string>
    <string name="task_marked_active">task active</string>
    <string name="successfully_saved_task_message">Successfully saved task message</string>
    <string name="loading_tasks_error">Tasks loading error</string>
    <string name="make_call">Make call</string>
    <string name="login">Login</string>
    <string name="title_activity_recycler">Recycler Activity</string>
    <string name="calling">Call</string>
    <string name="myNumber">1-800-232-0233</string>
    <string name="image_call_hint">Call</string>
    <string name="hello">Hello</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message</string>
    <string name="phone">Phone</string>
    <string name="server_client_id">870272768791-hiohc3satnmh6m8ej81kvpqc9l45vs7g.apps.googleusercontent.com</string>
    <string name="email">Email</string>
    <string name="add_contact">Add contact</string>
    <string name="name">Name</string>
    <string name="begin_login">Login</string>
    <string name="cdc_contact">CDC info for covid vaccine</string>
    <string name="sign_in_with_google">Google sign in</string>
    <string name="hiring">Hiring</string>
    <string name="profile_picture">Profile picture</string>
    <string name="select_image">Select image</string>
    <string name="chat">Chat</string>
    <string name="hospital_button">Hospitals</string>
    <string name="title_activity_firebaseMainActivity">Firebase Main Activity</string>
    <string name="encrypt">Encrypt</string>
    <string name="add_friend">Add friend</string>
    <string name="sign_out_button">Sign out</string>
    <string name="message">Message</string>
    <string name="sign_out">Sign out</string>
    <string name="todo">Todo</string>
    <string name="decrypt">Decrypt</string>
    <string name="successfully_added_task_message">Successfully added</string>
    <string name="successfully_deleted_task_message">Error in adding</string>
    <string name="hospitallocator">Hospital locator</string>
    <string name="for_example_providence_newberg">For example Providence Newberg</string>
    <string name="com_example_findhospital_ui_list_hospitallistviewmodel">com.example.findhospital.ui.list.HospitalListViewModel</string>
    <string name="title_covid_tracker">Covid tracker</string>
    <string name="app_description">COVID tracker</string>
</resources>