<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PhoneActivity">

    <ImageView
        android:id="@+id/GfG_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_number"
        app:srcCompat="@drawable/mask_starfish" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:padding="5dp"
        android:text="@string/cdc_contact"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_call" />

    <TextView
        android:id="@+id/txt_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="140dp"
        android:padding="5dp"
        android:text="@string/myNumber"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/txt_name"
        app:layout_constraintTop_toTopOf="@+id/txt_name" />

    <EditText
        android:id="@+id/edit_text_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="232dp"
        android:autofillHints="Enter phone number"
        android:hint="@string/calling"
        android:inputType="phone"
        android:minHeight="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_call"
        android:layout_width="181dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/image_call_hint"
        android:inputType="phone"
        android:minWidth="32dp"
        android:onClick="makePhoneCall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight="match_parent"
        app:layout_constraintStart_toStartOf="@+id/edit_text_number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth="wrap_content"
        app:srcCompat="@drawable/ic_phone" />
</androidx.constraintlayout.widget.ConstraintLayout>
